--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,13 @@ FROM oven/bun:latest
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package*.json bun.lock ./
+
 RUN bun install --production
 
+# copy source code
 COPY index.ts ./
 
 EXPOSE 3000
 
-CMD ["node", "index.ts"]
+CMD ["bun", "run", "index.ts"]
