--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,16 @@
     "start": "bun run index.ts",
     "dev": "bun --watch index.ts"
   },
-  "devDependencies": {
-    "@types/bun": "latest",
+  "dependencies": {
     "express": "^5.1.0",
     "redis": "^5.8.3",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "@types/express": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "dependencies": {
-    "@types/express": "^5.0.3"
   }
 }
