--- a/helm-charts/devops-demo/templates/frontend-deployment.yaml
+++ b/helm-charts/devops-demo/templates/frontend-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "devops-demo.fullname" . }}-frontend
+  name: {{ include "devops-demo.name" . }}-frontend
   labels:
     app: frontend
 spec:
